syntax = "proto3";

package jobs.v1beta1;

option go_package = "api/managementpb/jobs;jobs1beta1";

import "github.com/mwitkow/go-proto-validators/validator.proto";
import "google/api/annotations.proto";
import "google/protobuf/duration.proto";

message GetJobRequest {
  // Unique Job ID.
  string job_id = 1 [
    (validator.field) = {
      string_not_empty: true
    }
  ];
}

message GetJobResponse {
  // Error contains job error message.
  message Error {
    string message = 1;
  }
  // Echo contains result for echo job.
  message Echo {
    string message = 1;
  }
  // Unique Job ID.
  string job_id = 1;
  // pmm-agent ID where this Job is running / was run.
  string pmm_agent_id = 2;
  // True if Job is finished.
  bool done = 4;
  oneof result {
    // Error result.
    Error error = 10;
    // Echo job result.
    Echo echo = 11;
  }
}

message StartEchoJobRequest {
  // pmm-agent ID where to run this Job.
  string pmm_agent_id = 1 [
    (validator.field) = {
      string_not_empty: true
    }
  ];
  google.protobuf.Duration timeout = 2;
  string message = 3;
  google.protobuf.Duration delay = 4;
}

message StartEchoJobResponse {
  // Unique Job ID.
  string job_id = 1;
  // pmm-agent ID where to this Job was started.
  string pmm_agent_id = 2;
}

message CancelJobRequest {
  // Unique Job ID. Required.
  string job_id = 1 [
    (validator.field) = {
      string_not_empty: true
    }
  ];
}

message CancelJobResponse {}

// Jobs service provides public Management API methods for Jobs.
service Jobs {
  // GetJob gets an result of given Job.
  rpc GetJob(GetJobRequest) returns (GetJobResponse) {
    option (google.api.http) = {
      post: "/v1/management/Jobs/Get"
      body: "*"
    };
  }
  // StartEchoJob starts echo job.
  rpc StartEchoJob(StartEchoJobRequest) returns (StartEchoJobResponse) {
    option (google.api.http) = {
      post: "/v1/management/Jobs/StartEcho"
      body: "*"
    };
  }
  // CancelJob stops a Job.
  rpc CancelJob(CancelJobRequest) returns (CancelJobResponse) {
    option (google.api.http) = {
      post: "/v1/management/Jobs/Cancel"
      body: "*"
    };
  }
}
